--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_rating_bar: ^3.2.0
   flutter_youtube: ^2.0.0+1
   collection: ^1.14.9
+  barcode: ^1.17.1
 
   # infinite_scroll_pagination: ^3.0.1
 
@@ -63,6 +64,7 @@ flutter:
     - assets/images/playbutton.png
     - assets/images/arrowright.png
     - assets/images/screen.png
+    - assets/images/paypal.png
 
     # - images/a_dot_ham.jpeg
 
