--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_rating_bar: ^3.2.0
   flutter_youtube: ^2.0.0+1
   collection: ^1.14.9
-  barcode: ^1.17.1
+  barcode_widget: ^1.5.0
 
   # infinite_scroll_pagination: ^3.0.1
 
@@ -65,6 +65,8 @@ flutter:
     - assets/images/arrowright.png
     - assets/images/screen.png
     - assets/images/paypal.png
+    - assets/images/logout.png
+    - assets/images/ticket.png
 
     # - images/a_dot_ham.jpeg
 
