--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,7 @@ dependencies:
   flutter_youtube: ^2.0.0+1
   collection: ^1.14.9
   barcode_widget: ^1.5.0
-
-  # infinite_scroll_pagination: ^3.0.1
+  toast: ^0.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,7 +66,8 @@ flutter:
     - assets/images/paypal.png
     - assets/images/logout.png
     - assets/images/ticket.png
-
+    - assets/images/lockblack.png
+    
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
